<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rl_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fdefefef"
    android:orientation="vertical"
    tools:context="com.example.peter.redfaceplusplus.activities.RegisterActivity">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="4"
        android:background="@mipmap/a">

        <include layout="@layout/title_table" />

        <com.example.peter.redfaceplusplus.utils.CircleImageView
            android:id="@+id/img_show"
            android:layout_width="180dp"
            android:layout_height="180dp"
            android:layout_centerInParent="true"
            android:layout_marginTop="69dp"

            android:background="@drawable/icon_background" />

    </RelativeLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/whiter" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="6"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="30dp"
            android:background="@color/whiter"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_weight="1.5"
                android:layout_gravity="left|center_vertical"
                android:text="Name "
                android:textColor="#263940"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/ed_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="10dp"
                android:layout_weight="8.5"
                android:background="@drawable/edit_background"
                android:layout_gravity="left|center_vertical"
                android:hint="@string/inputhint"
                android:maxLength="13"
                android:maxLines="1"
                android:textCursorDrawable="@drawable/color_cursor"
                android:textColor="@color/black"
                android:textColorHint="@color/gray"
                android:textSize="18sp" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:background="@color/whiter"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="left|center_vertical"
                android:layout_marginLeft="20dp"
                android:layout_weight="1.5"
                android:text="Start Time "
                android:textColor="#263940"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/btn_start"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="10dp"
                android:layout_weight="8.5"
                android:background="@drawable/edit_background"
                android:text="@string/start"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:background="@color/whiter"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="left|center_vertical"
                android:layout_marginLeft="20dp"
                android:layout_weight="1.5"
                android:text="End Time "
                android:textColor="#263940"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/btn_end"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="10dp"
                android:layout_weight="8.5"
                android:background="@drawable/edit_background"
                android:text="@string/end"
                android:textSize="18sp" />
        </LinearLayout>

        <!--<LinearLayout-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_gravity="center"-->
        <!--android:layout_marginTop="27dp"-->
        <!--android:orientation="horizontal">-->

        <!--<Button-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_marginLeft="25dp"-->
        <!--android:background="@color/green"-->
        <!--android:text="@string/employee"-->
        <!--android:textAllCaps="false"-->
        <!--android:textColor="@color/whiter"-->
        <!--android:textSize="18sp" />-->

        <!--<Button-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_marginLeft="25dp"-->
        <!--android:background="@color/green"-->
        <!--android:text="@string/visitors"-->
        <!--android:textAllCaps="false"-->
        <!--android:textColor="@color/whiter"-->
        <!--android:textSize="18sp" />-->

        <!--<Button-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_marginLeft="25dp"-->
        <!--android:background="@color/green"-->
        <!--android:text="@string/vip"-->
        <!--android:textAllCaps="false"-->
        <!--android:textColor="@color/whiter"-->
        <!--android:textSize="18sp" />-->
        <!--</LinearLayout>-->
    </LinearLayout>

    <Button
        android:id="@+id/btn_add"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@color/colorPrimary"
        android:text="@string/add"
        android:textAllCaps="false"
        android:textColor="@color/whiter"
        android:textSize="18sp" />

</LinearLayout>
